# Autonomous-Workflow-Orchestration

./: digital_worker.db  digital_worker_state.db
digital_worker/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_advanced_dag.py  test_negotiation.py  test_pipeline.py
digital_worker/agents/: agent_factory.py  browser_agent.py  decision_agent.py  exception_agent.py  execution_agent.py  extraction_agent.py  input_agent.py  llm_router.py  negotiation_agent.py  reporting_agent.py  validation_agent.py
digital_worker/api/: custom_docs.py  dashboard.py  main.py  security.py
digital_worker/api/connectors/: email.py  gmail_connector.py
digital_worker/api/static/: index.html  swagger_premium.css  swagger_visualizer.js
digital_worker/core/: config.py  dag_engine.py  logger.py  models.py  orchestrator.py  state_manager.py
digital_worker/database/: db.py
digital_worker/digital_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
digital_worker/memory/: pattern_miner.py  vector_store.py
digital_worker/tests/: conftest.py  test_advanced_dag.py  test_negotiation.py  test_pipeline.py
digital_worker/workflows/: invoice_processing.json
