[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-worker"
version = "0.1.0"
description = "Adaptive Multi-Agent Digital Worker Platform for BPOs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "playwright>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.0.10",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "sqlite3", # Standard library, but listed for clarity
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[project.scripts]
digital-worker = "api.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "agents*", "database*", "memory*", "workflows*"]
